# cache-template

./: .gitignore  .pre-commit-config.yaml  README.md  dataset_description.json
.claude/skills/setup-cache/: SKILL.md
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: add-to-project.yml  build_and_upload_docker_image.yml  update.yml
code/: compress.py  minify.py  update.py  update_pipeline.sh
containers/: Dockerfile
derivatives/: README.md
envs/: pyproject.toml
logs/: README.md
sourcedata/: README.md
